fixed column overlap

--- a/surf-paddle.css
+++ b/surf-paddle.css
@@ -8,6 +8,10 @@ a {
 	color: rgb(162, 181, 193);
 }
 
+a:hover {
+	color: rgb(20, 111, 179);
+}
+
 .container {
 	margin: 1px;
 	font-family: "Open Sans";
@@ -28,7 +32,6 @@ a {
 .top {
 	position: relative;
 	padding-top: 10px;
-	font-weight: bold;
 }
 
 .logo {
@@ -48,6 +51,7 @@ a {
 .link-top {
 	display: inline-block;
 	height: 45px;
+	font-weight: bold;
 	vertical-align: top;
 	line-height: 45px;
 	text-align: center;
@@ -113,17 +117,17 @@ a {
 	color: rgb(0, 96, 176);
 	height: 40px;
 	vertical-align: top:;
-	line-height: 30px;
+	line-height: 22px;
 	text-align: center;
-	font-size: 12px;
+	font-size: 10px;
 	margin-bottom: 30px;
 }
 
 .author img {
-	width: 30px;
-	height: auto;
+	width: auto;
+	height: 22px;
 	vertical-align: top;
-	padding-right: 5px;
+	padding-right: 7px;
 
 }
 
@@ -187,13 +191,13 @@ a {
 	/*Right*/
 
 .right {
-	width: 350px;
+	width: 35%;
 	display: inline-block;
 	margin: 10px;
-	padding: 60px 50px;
+	padding: 60px 120px 70px 50px;
 	text-align: center;
-	position: absolute;
-	right: 60px;
+	vertical-align: top;
+	position: relative;
 }
 
 .author-name {
